kompose-proxy/us_proxy/us-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-proxy.yml -o kompose-proxy/
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: us-proxy
  name: us-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: us-proxy
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-proxy.yml -o kompose-proxy/
        kompose.version: 1.26.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: us-proxy
    spec:
      containers:
        - image: z4yross/us_proxy
          name: us-proxy
          ports:
            - containerPort: 80
            # - containerPort: 443
            - containerPort: 1935
          resources: {}
      restartPolicy: Always
status: {}
