kompose-proxy/us_proxy/mc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-service
spec:
  selector:
    io.kompose.service: us-proxy
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: rtmp
      protocol: TCP
      port: 1935
      targetPort: 1935
