kompose-proxy/us_proxy/rtmp-ingress-lb.yaml
kind: Service
apiVersion: v1
metadata:
  name: rtmp-ingress-lb
spec:
  type: LoadBalancer
  selector:
    io.kompose.service: us-proxy
  ports:
    - port: 1935
      targetPort: 1935
