kompose-proxy/us_proxy/us-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-proxy.yml -o kompose-proxy/
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: us-proxy
  name: us-proxy
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    # - name: "443"
    #   port: 443
    #   targetPort: 443
    - name: "rtmp"
      port: 1935
      protocol: TCP
      targetPort: 1935
  selector:
    io.kompose.service: us-proxy
status:
  loadBalancer: {}
